Change player rotation to turn left

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             // Math.PI / 2 = 90 degrees (Turn Right)
             // -Math.PI / 2 = -90 degrees (Turn Left)
             // Math.PI = 180 degrees (Turn Around)
-            playerRotation: Math.PI / 2
+            playerRotation: -Math.PI / 2
         };
 
         // --- Three.js Engine Class ---
