playerRotation: -Math.PI / 2

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             animationSpeed: 500,
             zIndex: 7.0,
             platformTopOffset: 0.25,
-            playerRotation: Math.PI / 2
+            playerRotation: -Math.PI / 2
         };
 
         // --- Three.js Engine Class ---
